--- a/src/main/resources/templates/front-end/header.html
+++ b/src/main/resources/templates/front-end/header.html
@@ -134,6 +134,14 @@
                                     <hr class="mt--10 mb--10">
                                     <ul class="user-list-wrapper">
                                         <li>
+                                            <a href="/user/user_register">
+                                                <i class="feather-log-out" name="register-btn"></i>
+                                                <span>註冊</span>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                    <ul class="user-list-wrapper">
+                                        <li>
                                             <a href="/user/user_login">
                                                 <i class="feather-log-out" name="logout-in-btn"></i>
                                                 <span>登入</span>
